--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <h1>
             <div >
-                <input class="gator-button" type ="button" value ="ワニ放出！！">
+                <input class="gator-button" type ="button" value ="ワニ放出！!!!!!！">
                 <input id="textbox" type="text" required minlength="4" maxlength="8" size="15"></input>
             </div>
             
